--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
   ],
   "outputDirectory": "dist/public",
   "framework": "vite",
-  "buildCommand": "npm run build:vercel",
+  "buildCommand": "npm run build",
   "env": {
     "NODE_ENV": "production"
   },
